filled out the controllers and made sure the names across the files were good

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
     </section> -->
 
-    <section id="battleground" class="card card--battleground"></section>
+    <!-- <section id="battleground" class="card card--battleground"></section> -->
 
   </article>
 
@@ -178,6 +178,7 @@
   <script src="/app/controllers/ClassCtrl.js"></script>
   <script src="/app/controllers/PlayerCtrl.js"></script>
   <script src="/app/controllers/WeaponCtrl.js"></script>
+  <script src="/app/controllers/BattleCtrl.js"></script>
 
   <script src="javascripts/weapons.js"></script>
   <script src="javascripts/classes.js"></script>
