player can choose a spell and move on to the battle screen

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="/app/controllers/NameSelectCtrl.js"></script>
   <script src="/app/controllers/WeaponSelectCtrl.js"></script>
   <script src="/app/controllers/BattleCtrl.js"></script>
+  <script src="/app/controllers/SpellSelectCtrl.js"></script>
 
               <!-- Factory tags -->
   <script src="app/factories/ClassesFactory.js"></script>
